# ConnectTool

./: .gitignore  CMakeLists.txt  online_game_tool.cpp  server_main.cpp  setup_build_env.py
.github/workflows/: build.yml  ci-build.yml
config/: config_manager.h  default_config.json
core/: connect_tool_core.cpp  connect_tool_core.h
net/: heartbeat_manager.cpp  heartbeat_manager.h  ip_negotiator.cpp  ip_negotiator.h  vpn_protocol.h
steam/: steam_message_handler.cpp  steam_message_handler.h  steam_networking_manager.cpp  steam_networking_manager.h  steam_room_manager.cpp  steam_vpn_bridge.cpp  steam_vpn_bridge.h
tun/: tun_factory.cpp  tun_interface.h  tun_linux.cpp  tun_macos.cpp  tun_windows.cpp
